# obs-studio

plugins/: CMakeLists.txt
plugins/linux-kvmfr/: CMakeLists.txt  KVMFR.h  README  kvmfr-source.c  linux-kvmfr.c
plugins/linux-kvmfr/data/locale/: en-US.ini
plugins/linux-looking-glass/: CMakeLists.txt  README  linux-looking-glass.c  looking-glass-source.c
plugins/linux-looking-glass/data/locale/: en-US.ini
